force-app/main/default/objects/RTL_Interested_products_c__c/RTL_Interested_products_c__c.object-meta.xml
<CustomObject>
    <description>To store interested product details for a lead.</description>
    <label>Interested Products</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Interested Products Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interested Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>