force-app/main/default/objects/RTL_Interested_products_c__c/fields/Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign End Date</label>
    <type>Date</type>
</CustomField>