force-app/main/default/objects/RTL_Interested_products_c__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>