force-app/main/default/objects/RTL_Interested_products_c__c/fields/Co_borrower_2__c.field-meta.xml
<CustomField>
    <fullName>Co_borrower_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-borrower 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>