force-app/main/default/objects/RTL_Interested_products_c__c/fields/Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collateral Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>