force-app/main/default/objects/RTL_Interested_products_c__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interested Products</relationshipLabel>
    <relationshipName>Interested_Products</relationshipName>
    <type>Lookup</type>
</CustomField>