force-app/main/default/objects/RTL_Interested_products_c__c/fields/Debt__c.field-meta.xml
<CustomField>
    <fullName>Debt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Debt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>