force-app/main/default/objects/RTL_Interested_products_c__c/fields/Income_SE__c.field-meta.xml
<CustomField>
    <fullName>Income_SE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Income - SE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>