force-app/main/default/objects/RTL_Interested_products_c__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Interested Products</relationshipLabel>
    <relationshipName>Interested_Products</relationshipName>
    <type>Lookup</type>
</CustomField>