force-app/main/default/objects/RTL_Interested_products_c__c/fields/Others_3__c.field-meta.xml
<CustomField>
    <fullName>Others_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Others 3 (HCAL Result)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>