force-app/main/default/objects/RTL_Interested_products_c__c/fields/product_group__c.field-meta.xml
<CustomField>
    <fullName>product_group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Group</label>
    <length>30</length>
    <type>Text</type>
</CustomField>