force-app/main/default/objects/RTL_Interested_products_c__c/fields/Product_Lead_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Lead_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Product Lead Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>