force-app/main/default/objects/RTL_Interested_products_c__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RTL_product_master__c.Product_Group__c</field>
            <operation>notEqual</operation>
            <value>Loan Retention</value>
        </filterItems>
        <filterItems>
            <field>RTL_product_master__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RTL_product_master__c</referenceTo>
    <relationshipLabel>Interested Products</relationshipLabel>
    <relationshipName>Interested_Products</relationshipName>
    <type>Lookup</type>
</CustomField>