force-app/main/default/objects/RTL_Interested_products_c__c/fields/Product_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Sub Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>