force-app/main/default/objects/RTL_Interested_products_c__c/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TMB - reputation concern</fullName>
            </value>
            <value>
                <fullName>Channel - inconvenient</fullName>
            </value>
            <value>
                <fullName>CM - Dissatisfaction with bank</fullName>
            </value>
            <value>
                <fullName>Product - Fee and Interest</fullName>
            </value>
            <value>
                <fullName>Product - Conditions</fullName>
            </value>
            <value>
                <fullName>Product - Benefits</fullName>
            </value>
            <value>
                <fullName>Disqualif. - bank condition/policy</fullName>
            </value>
            <value>
                <fullName>CM - Not interest in product</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>