force-app/main/default/objects/RTL_Interested_products_c__c/recordTypes/Interested_Products.recordType-meta.xml
<RecordType>
    <fullName>Interested_Products</fullName>
    <active>true</active>
    <label>Interested Products</label>
</RecordType>