force-app/main/default/objects/RTL_Interested_products_c__c/recordTypes/Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Read_Only</fullName>
    <active>true</active>
    <description>This record type is set in workflow upon lead conversion . Not Accessible to users.</description>
    <label>Read Only</label>
</RecordType>