force-app/main/default/objects/RTL_Interested_products_c__c/validationRules/RTL_Not_Allow_Edit_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Not_Allow_Edit_Closed</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISPICKVAL(Lead__r.Status,&apos;Closed Lost&apos;),
AND(
ISPICKVAL(Lead__r.Status,&apos;Duplicated&apos;),Lead__r.RTL_IsDuplicate_Lead__c = false ))</errorConditionFormula>
    <errorMessage>Closed Lead cannot be edited</errorMessage>
</ValidationRule>