force-app/main/default/objects/RTL_Interested_products_c__c/validationRules/RTL_Not_Allow_Edit_Primary_Qualified.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Not_Allow_Edit_Primary_Qualified</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISPICKVAL(Lead__r.Status,&apos;Qualified&apos;), 
ISCHANGED( Is_Primary__c ) 
)</errorConditionFormula>
    <errorMessage>Primary Interested Product cannot be created or modified when Lead is Qualified</errorMessage>
</ValidationRule>