force-app/main/default/objects/RTL_Interested_products_c__c/validationRules/RTL_UnqualifiedReason_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_UnqualifiedReason_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Unqualified_Reason__c , &quot;&quot;) , Unqualified__c )</errorConditionFormula>
    <errorDisplayField>Unqualified_Reason__c</errorDisplayField>
    <errorMessage>Unqualified reason cannot be blank if Unqualified is checked.</errorMessage>
</ValidationRule>